# TradeSignalApp

./: .editorconfig  .gitattributes  .gitignore  PROJECT_DESCRIPTION.md  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  error_handlers.py  logging_config.py  main.py  timeframes.py
backend/app/controllers/: __init__.py  analysis_controller.py  analysis_run_controller.py  calendar_controller.py  exceptions.py  outcome_controller.py  pair_controller.py  performance_controller.py  results.py  risk_controller.py  signal_controller.py
backend/app/database/: __init__.py  connection.py
backend/app/models/: __init__.py  analysis_run.py  base.py  pair.py  signal.py
backend/app/schemas/: analysis.py  calendar.py  common.py  health.py  pair.py  performance.py  risk.py  signal.py
backend/app/services/: __init__.py
backend/app/tasks/: __init__.py  analysis_job.py  outcome_job.py  scheduler.py
backend/app/views/: __init__.py  analysis.py  calendar.py  health.py  pairs.py  performance.py  risk.py  signals.py  stream.py
backend/db/: README.md  check_database.sql  create_local_database.sql  seed_pairs.sql
backend/migrations/: env.py
backend/migrations/versions/: 2026_05_08_1200-0001_initial_schema.py  2026_06_02_1200-0002_signal_take_profit_targets.py  2026_06_03_1200-0003_signal_type.py  2026_06_03_1300-0004_signal_outcome.py  2026_06_04_1200-0005_analysis_run_usage.py  2026_06_06_1200-0006_signal_quality.py
backend/tests/: _factories.py  _stubs.py  conftest.py
backend/tests/integration/: test_api_routes.py  test_app.py  test_health.py  test_lifespan.py
backend/tests/unit/: test_ai_pricing.py  test_ai_providers.py  test_analysis_controller.py  test_analysis_job.py  test_analysis_run_controller.py  test_calendar_controller.py  test_config.py  test_config_notifications.py  test_database.py  test_dependencies.py  test_economic_calendar.py  test_event_bus.py  test_health_components.py  test_indicators.py  test_market_data.py  test_market_data_cache.py  test_migrations.py  test_models.py  test_notifications.py  test_outcome_controller.py  test_outcome_evaluator.py  test_outcome_job.py  test_pair_controller.py  test_performance_calculator.py  test_performance_controller.py  test_position_sizing.py  test_repositories.py  test_scheduler.py  test_schemas.py  test_signal_controller.py  test_signal_gate.py  (+2 more)
(+198 files in other folders)
