[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradesignal-backend"
version = "0.1.0"
description = "TradeSignal AI — Automated Forex and Gold trade signal generation API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.0",
    "uvicorn[standard]==0.45.0",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "sqlalchemy==2.0.49",
    "greenlet==3.3.0",
    "alembic==1.18.4",
    "apscheduler==3.11.2",
    "asyncpg==0.31.0",
    "httpx==0.28.1",
    "python-dotenv==1.2.2",
    "groq==1.2.0",
    "anthropic==0.96.0",
    "pandas==3.0.2",
    "numpy==2.4.4",
    "pandas-ta-classic==0.4.47",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.11",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (replaces flake8, isort, black)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (undefined names, unused imports)
    "I",    # isort (import ordering)
    "B",    # flake8-bugbear (common pitfalls)
    "C4",   # flake8-comprehensions (unnecessary list/dict calls)
    "UP",   # pyupgrade (modernise syntax for target Python version)
    "N",    # pep8-naming conventions
    "S",    # bandit (security anti-patterns)
    "RUF",  # ruff-specific rules
]
ignore = [
    "S101",  # assert is acceptable in test code
    "B008",  # FastAPI uses Depends() as a default argument — that's intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "B"]          # relax security/bugbear checks inside tests
"app/config.py" = ["S104"]            # 0.0.0.0 is the correct default for a server host binding

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
pythonpath = ["."]
